2A/05_Projet_GL/src/test/deca/context/valid/complet/74_method_call_class.deca
// Description :
// Test valide contextulle
// Resultats :
//    Arbre avec décoration 
// Historique : 
//  cree le 18/01/2024

class A {
    
    int getInt() {
        return 1 ;
    }
}

class B {
    A a ; 
    int b = a.getInt(); 
}